# pca-scenery

./: .gitignore  404.html  README.md  __init__.py  __main__.py  common.py  coverage.py  dev-requirements.txt  http_checker.py  index.html  manifest.py  manifest_parser.py  metatest.py  method_builder.py  mkdocs.yml  pyproject.toml  requirements.txt  set_up_handler.py  setup_dev.sh  sitemap.xml
.github/workflows/: doc.yml  test.yml
_old_scenery/: __init__.py  common_items.yml  coverage.py  io.py  manifest_parser.py  manifests_from_markdowns.py  metatest.py  method_builder.py  rehearsal.py  unittest.py
_old_scenery/_prelim_selim/: cases.py  login.py  register.py
_old_scenery/highschool/: dijon_carnot.yml
_old_scenery/interaction_v1/: flag_math.yml  flag_radio.yml  get.yml  seconde_tutoriels_9_03.yml
_old_scenery/login/: user_inactive.yml  user_inactive_wrong_password.yml  user_wrong_password.yml
_old_scenery/register/: age_young.yml  email_wait_verif.yml  password_common.yml  password_short.yml
_old_scenery/views/: checker.py  dataclasses.py  enums.py  io.py  scenery.json  set_up_handler.py  set_up_instructions.py  take_builder.py
_old_scenery/views/_prelim_selim/: latex_help.py  user_answer.py
_old_scenery/views/highschool/: parisian_highschools.yml
_old_scenery/views/interaction_v1/: inequalities.yml  seconde_tutoriels_9_00.yml
api/: index.html
cmds/: build.sh  setup_dev.sh  test.sh  upload_testpypi.sh
contributing/: index.html
docs/: glossary.md  index.md  manifest_specification.md
drafts/: coverage.py  old.md  old__init__.py  old__main__.py  past_ideas.py
examples/basic/: index.html
glossary/: index.html
installation/: index.html
manifest/: dataclasses.py
manifest_specification/: index.html
rehearsal/: __init__.py  __main__.py  set_up_instructions.py  tests.py
rehearsal/manifests/: hello.yml
rehearsal/project_django/: db.sqlite3
scenery/: __main__.py  common.py  http_checker.py  manifest.py  manifest_parser.py  metatest.py  method_builder.py  set_up_handler.py
scenery/rehearsal/: __init__.py  __main__.py  set_up_instructions.py  tests.py
settings/: index.html
src/pca_scenery.egg-info/: PKG-INFO  SOURCES.txt
src/scenery/: __main__.py  common.py  http_checker.py  manifest.py  manifest_parser.py  metatest.py  method_builder.py
src/scenery.egg-info/: PKG-INFO  SOURCES.txt
usage/: index.html
(+19 files in other folders)
